<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:background="#fff"
    android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:stretchColumns="1">

            <TableRow
                style="@style/common_tablerow">
                <TextView android:text="@string/customerType"
                    style="@style/common_tablerow_text"
                    />

                <Spinner
                    android:id="@+id/customerType"
                    style="@style/common_tablerow_spinner"/>
            </TableRow>
            <TableRow
                style="@style/common_tablerow">
                <TextView android:text="@string/customerName"
                    style="@style/common_tablerow_text"
                    />
                <EditText android:id="@+id/customerName"
                    android:hint="请输入您的姓名"
                    style="@style/common_tablerow_edit"
                    />
            </TableRow>

            <TableRow
                style="@style/common_tablerow">
                <TextView android:text="@string/cardType"
                    style="@style/common_tablerow_text"
                    />
                <Spinner android:id="@+id/cardType"
                    style="@style/common_tablerow_spinner"
                    />
            </TableRow>

            <TableRow
                style="@style/common_tablerow">
                <TextView android:text="@string/cardNumber"
                    style="@style/common_tablerow_text"
                    />
                <EditText android:id="@+id/cardNumber"
                    android:hint="请输入证件号码"
                    style="@style/common_tablerow_edit"
                    />
            </TableRow>
            <TableRow
                style="@style/common_tablerow">
                <TextView android:text="@string/telephoneNumber"
                    style="@style/common_tablerow_text"
                    />
                <EditText android:id="@+id/telephoneNumber"
                    android:hint="请输入手机号码"
                    style="@style/common_tablerow_edit"
                    />
            </TableRow>
            <TableRow
                style="@style/common_tablerow">
                <TextView android:text="@string/businessType"
                    style="@style/common_tablerow_text"
                    />
                <Spinner android:id="@+id/businessType"
                    style="@style/common_tablerow_spinner"
                    />
            </TableRow>
        </TableLayout>
        <TableLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="0,1,2,3,4">
            <TableRow
                style="@style/common_tablerow">
                <TextView android:text="@string/loanAfter"
                    style="@style/common_tablerow_text"
                    />
                <Button android:id="@+id/loanAfter_left"
                    android:text="@string/interval"
                    style="@style/common_btn"
                    />
                <EditText
                    style="@style/common_interval_edit"
                    android:id="@+id/loanAfter_before_text"/>

                <TextView
                    style="@style/common_interval_text"
                    android:text="@string/interval_text"
                    android:id="@+id/loanAfter_text"
                    />

                <EditText
                    style="@style/common_interval_edit"
                    android:id="@+id/loanAfter_after_text"/>
            </TableRow>
            <TableRow
                style="@style/common_tablerow">
                <TextView android:text="@string/overdueAmount"
                    style="@style/common_tablerow_text"
                    />
                <Button android:id="@+id/overdueAmount_left"
                    android:text="@string/interval"
                    style="@style/common_btn"
                    />
                <EditText
                    style="@style/common_interval_edit"
                    android:id="@+id/overdueAmount_before_text"/>

                <TextView
                    style="@style/common_interval_text"
                    android:text="@string/interval_text"
                    android:id="@+id/overdueAmount_text"
                    />

                <EditText
                    style="@style/common_interval_edit"
                    android:id="@+id/overdueAmount_after_text"/>
            </TableRow>
            <TableRow
                style="@style/common_tablerow">
                <TextView android:text="@string/overduePeriods"
                    style="@style/common_tablerow_text"
                    />
                <Button android:id="@+id/overduePeriods_left"
                    android:text="@string/interval"
                    style="@style/common_btn"
                    />
                <EditText
                    style="@style/common_interval_edit"
                    android:id="@+id/overduePeriods_before_text"/>

                <TextView
                    style="@style/common_interval_text"
                    android:text="@string/interval_text"
                    android:id="@+id/overduePeriods_text"
                    />

                <EditText
                    style="@style/common_interval_edit"
                    android:id="@+id/overduePeriods_after_text"/>
            </TableRow>
            <TableRow
                style="@style/common_tablerow">
                <TextView android:text="@string/issuingDate"
                    style="@style/common_tablerow_text"
                    />
                <Button android:id="@+id/issuingDate_left"
                    android:text="@string/interval"
                    style="@style/common_btn"
                    />
                <EditText
                    style="@style/common_interval_edit"
                    android:id="@+id/issuingDate_before_text"/>

                <TextView
                    style="@style/common_interval_text"
                    android:text="@string/interval_text"
                    android:id="@+id/issuingDate_text"
                    />

                <EditText
                    style="@style/common_interval_edit"
                    android:id="@+id/issuingDate_after_text"/>
            </TableRow>
            <TableRow
                style="@style/common_tablerow">
                <TextView android:text="@string/dueDate"
                    style="@style/common_tablerow_text"
                    />
                <Button android:id="@+id/dueDate_left"
                    android:text="@string/interval"
                    style="@style/common_btn"
                    />
                <EditText
                    style="@style/common_interval_edit"
                    android:id="@+id/dueDate_before_text"/>

                <TextView
                    style="@style/common_interval_text"
                    android:text="@string/interval_text"
                    android:id="@+id/dueDate_text"
                    />

                <EditText
                    style="@style/common_interval_edit"
                    android:id="@+id/dueDate_after_text"/>
            </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:stretchColumns="1">

            <TableRow
                style="@style/common_tablerow">
                <TextView android:text="@string/classification"
                    style="@style/common_tablerow_text"
                    />

                <Spinner
                    android:id="@+id/level"
                    style="@style/common_tablerow_spinner" />
            </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="0">
            <TableRow
                style="@style/common_tablerow"
                android:layout_margin="16dp"
                >
                <Button android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="查询"
                    android:textColor="#fff"
                    android:gravity="center"
                    />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>
