<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/CertName_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/certName_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/CertName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/CertName_left"
        android:layout_toRightOf="@+id/CertName_left"
        android:gravity="left"
        />
    <TextView
        android:id="@+id/CertID_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CertName_left"
        android:text="@string/certID_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/CertID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/CertID_left"
        android:layout_toRightOf="@+id/CertID_left"
        android:layout_below="@id/CertName"
        android:gravity="left"/>
    <TextView
        android:id="@+id/CustomerName_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CertID_left"
        android:text="@string/customerName_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/CustomerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/CustomerName_left"
        android:layout_toRightOf="@+id/CustomerName_left"
        android:layout_below="@id/CertID"
        android:gravity="left"/>
    <TextView
        android:id="@+id/RelationName_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CustomerName_left"
        android:text="@string/relationName"
        android:gravity="center"/>
    <TextView
        android:id="@+id/RelationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/RelationName_left"
        android:layout_toRightOf="@+id/RelationName_left"
        android:layout_below="@id/CustomerName"
        android:gravity="left"/>
    <TextView
        android:id="@+id/UserName_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RelationName_left"
        android:text="@string/userName"
        android:gravity="center"/>
    <TextView
        android:id="@+id/UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/UserName_left"
        android:layout_toRightOf="@+id/UserName_left"
        android:layout_below="@id/RelationName"
        android:gravity="left"/>
    <TextView
        android:id="@+id/OrgName_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/UserName_left"
        android:text="@string/orgName"
        android:gravity="center"/>
    <TextView
        android:id="@+id/OrgName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/OrgName_left"
        android:layout_toRightOf="@+id/OrgName_left"
        android:layout_below="@id/UserName"
        android:gravity="left"/>
    <TextView
        android:id="@+id/InputDate_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/OrgName_left"
        android:visibility="visible"
        android:text="@string/inputDate"
        android:gravity="center"/>
    <TextView
        android:id="@+id/InputDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/InputDate_left"
        android:layout_toRightOf="@+id/InputDate_left"
        android:layout_below="@id/OrgName"
        android:visibility="visible"
        android:gravity="left"/>
    <TextView
        android:id="@+id/UpdateDate_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/InputDate_left"
        android:visibility="visible"
        android:text="@string/updateDate"
        android:gravity="center"/>
    <TextView
        android:id="@+id/UpdateDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/UpdateDate_left"
        android:layout_toRightOf="@+id/UpdateDate_left"
        android:visibility="visible"
        android:layout_below="@id/InputDate"
        android:gravity="left"/>
    <TextView
        android:id="@+id/PractitionerTime_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/OrgName_left"
        android:visibility="gone"
        android:text="@string/practitionerTime"
        android:gravity="center"/>
    <TextView
        android:id="@+id/PractitionerTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/PractitionerTime_left"
        android:layout_toRightOf="@+id/PractitionerTime_left"
        android:layout_below="@id/OrgName"
        android:visibility="gone"
        android:gravity="left"/>
    <TextView
        android:id="@+id/Telephone_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/PractitionerTime_left"
        android:visibility="gone"
        android:text="@string/telephone"
        android:gravity="center"/>
    <TextView
        android:id="@+id/Telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/Telephone_left"
        android:layout_toRightOf="@+id/Telephone_left"
        android:layout_below="@id/PractitionerTime"
        android:visibility="gone"
        android:gravity="left"/>
    <TextView
        android:id="@+id/OfficeTime_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Telephone_left"
        android:visibility="gone"
        android:text="@string/officeTime"
        android:gravity="center"/>
    <TextView
        android:id="@+id/OfficeTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/OfficeTime_left"
        android:layout_toRightOf="@+id/OfficeTime_left"
        android:layout_below="@id/Telephone"
        android:visibility="gone"
        android:gravity="left"/>
</RelativeLayout>

