<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TableLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#FF0000"
        android:orientation="horizontal"
        android:gravity="center"
        android:stretchColumns="1">
        <TableRow android:orientation="horizontal">
            <RelativeLayout>
                <TextView
                    android:id="@+id/back_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_left"
                    android:textColor="#fff"
                    android:layout_marginLeft="10dp"
                    />
                <TextView android:id="@+id/back"
                    android:textColor="#fff"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/back_right"
                    android:layout_toRightOf="@id/back_left"
                    android:layout_toEndOf="@id/back_left"
                    android:layout_marginLeft="5dp"/>
            </RelativeLayout>

            <TextView android:padding="10dp"
                android:background="#FF0000"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#fff"
                android:gravity="center"
                android:text="@string/customer_details" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/business_fragment_bg" android:layout_height="wrap_content" android:layout_width="match_parent"></include>
        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></android.support.v4.view.ViewPager>
    </LinearLayout>
</LinearLayout>
